# coding-agent-workspace

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test.db  todos.db
.github/workflows/: ci.yml
.plan/: backlog.md  status.md
app/: README.md  __init__.py  config.py  crud.py  database.py  db.py  main.py  models.py  routes.py  schemas.py
app/api/: todo.py
app/api/v1/: todo.py
app/crud/: __init__.py  todo.py
app/db/: base.py  database.py
app/models/: __init__.py  todo.py
app/routers/: __init__.py  todo.py
app/schemas/: __init__.py  todo.py
docs/: architecture.md  design.md
frontend/: README.md  app.js  index.html  script.js  style.css  styles.css
src/: todos.db
src/app/: config.py  crud.py  database.py  main.py  models.py  routes.py  schemas.py
tests/: __init__.py  conftest.py  test_api.py  test_crud.py  test_main.py  test_todo.py  test_todo_api.py
